# webServer

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp
images/: test
include/: Buffer.h  BufferRIng.h  BufferRing.h  Client.h  Completion.h  Data.h  DataBase.h  Database.h  Epoll.h  Event.h  EventLoop.h  Http.h  Log.h  Node.h  Pool.h  Response.h  Ring.h  Server.h  Submission.h  Timer.h  UserData.h  UserRing.h
log/: Log.cpp  Log.h
resources/web/: index.html  login.html  register.html
src/: Buffer.cpp  Buffer.h  BufferRIng.cpp  BufferRing.cpp  Client.cpp  Client.h  Completion.cpp  Data.cpp  DataBase.cpp  DataBase.h  Database.cpp  Epoll.cpp  Epoll.h  Event.cpp  EventLoop.cpp  EventLoop.h  Http.cpp  Http.h  Log.cpp  Log.h  Node.cpp  Pool.cpp  Response.cpp  Ring.cpp  Server.cpp  Server.h  Submission.cpp  ThreadPool.cpp  ThreadPool.h  Timer.cpp  Timer.h  UserRing.cpp  main.cpp
src/base/: BufferRing.cpp  BufferRing.h  Completion.cpp  Completion.h  Submission.cpp  Submission.h  UserData.cpp  UserData.h  UserRing.cpp  UserRing.h
src/coroutine/: Awaiter.cpp  Awaiter.h  Awaiter.hpp  Generator.cpp  Generator.h  Generator.hpp  Result.cpp  Result.hpp  Scheduler.cpp  Scheduler.hpp  Task.cpp  Task.h  Task.hpp
src/database/: Database.cpp  Database.h  Database.hpp  DatabaseCallError.cpp  DatabaseCallError.h  DatabaseCallError.hpp  DatabaseError.cpp  DatabaseError.h  Mysql.cpp  Mysql.hpp  database_call_error.cpp  database_call_error.hpp
src/event/: AcceptEvent.cpp  AcceptEvent.h  CancelEvent.cpp  CancelEvent.h  CloseEvent.cpp  CloseEvent.h  Connection.cpp  Connection.h  Event.cpp  Event.h  EventLoop.cpp  EventLoop.h  ReceiveEvent.cpp  ReceiveEvent.h  SendEvent.cpp  SendEvent.h  TimeoutEvent.cpp  TimeoutEvent.h  Timer.cpp  Timer.h
src/eventLoop/: EventLoop.cpp  EventLoop.hpp
src/exception/: Exception.cpp  Exception.h
src/fileDescriptor/: Client.cpp  Client.hpp  FileDescriptor.cpp  FileDescriptor.hpp  Logger.cpp  Logger.hpp  Server.cpp  Server.hpp  Timer.cpp  Timer.hpp
src/http/: Database.cpp  Database.h  Database.hpp  Http.cpp  Http.h  Http.hpp  HttpParse.cpp  HttpParse.hpp  HttpParseError.cpp  HttpParseError.h  HttpRequest.cpp  HttpRequest.h  HttpRequest.hpp  HttpResponse.cpp  HttpResponse.h  HttpResponse.hpp  Request.cpp  Request.h  Response.cpp  Response.h  http.cpp  http.hpp  http_parse_error.cpp  http_parse_error.hpp  http_request.cpp  http_request.hpp  http_response.cpp  http_response.hpp
src/json/: JsonArray.cpp  JsonArray.hpp  JsonObject.cpp  JsonObject.hpp  JsonValue.cpp  JsonValue.hpp
src/log/: Exception.cpp  Exception.hpp  Log.cpp  Log.h  Log.hpp  LogQueue.cpp  LogQueue.hpp  Logger.cpp  Logger.hpp  Message.cpp  Message.h  Node.cpp  Node.h  Node.hpp  SafeQueue.cpp  SafeQueue.hpp  exception.cpp  exception.hpp  log.cpp  log.hpp  logger.cpp  logger.hpp  message.cpp  message.h  node.cpp  node.hpp
src/network/: Client.cpp  Client.h  Server.cpp  Server.h  Timer.cpp  Timer.h  UserData.cpp  UserData.h
src/ring/: BufferGroup.cpp  BufferGroup.hpp  Completion.hpp  Event.hpp  Outcome.cpp  Ring.cpp  Ring.hpp  RingBuffer.cpp  RingBuffer.hpp  Submission.cpp  Submission.hpp
src/scheduler/: ScheduleError.cpp  ScheduleError.hpp  Scheduler.cpp  Scheduler.h  Scheduler.hpp
src/socket/: Client.cpp  Client.h  Client.hpp  Server.cpp  Server.h  Server.hpp  SystemCallError.cpp  SystemCallError.hpp  Timer.cpp  Timer.hpp
src/timer/: Timer.cpp  Timer.h
src/userRing/: BufferRing.cpp  BufferRing.h  BufferRing.hpp  Completion.cpp  Completion.hpp  Event.cpp  Event.hpp  Outcome.hpp  Submission.cpp  Submission.hpp  UserData.cpp  UserData.h  UserData.hpp  UserRing.cpp  UserRing.h  UserRing.hpp  UserRingCallError.cpp  UserRingCallError.h
test/: test.lua
web/: index.css  index.html  index.js  login.html  register.html
